--- a/BudgetAllowance/app/src/main/res/layout/content_new_payment.xml
+++ b/BudgetAllowance/app/src/main/res/layout/content_new_payment.xml
@@ -18,9 +18,10 @@
         android:fillViewport="false">
 
         <LinearLayout
+            android:id="@+id/pastPaymentsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/pastPaymentsLayout">
+            android:orientation="vertical">
 
 
         </LinearLayout>
