--- a/BudgetAllowance/app/src/main/res/layout/activity_add_payment.xml
+++ b/BudgetAllowance/app/src/main/res/layout/activity_add_payment.xml
@@ -1,73 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="1"
     tools:context="lemonapps.budgetallowance.addPayment">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textShortMessage"
-        android:ems="10"
-        android:id="@+id/paymentDesc"
-        android:layout_marginTop="63dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/paymentDesc"
         android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="23dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/paymentValue"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/paymentDesc"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="58dp" />
+        android:layout_marginTop="10dp"
+        android:text="@string/paymentDesc"
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:id="@+id/paymentDesc"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
+        android:layout_marginTop="13dp"
         android:ems="10"
-        android:id="@+id/paymentValue"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView" />
+        android:inputType="textShortMessage" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="$"
-        android:id="@+id/textView3"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/paymentValue"
-        android:layout_toStartOf="@+id/paymentValue" />
+        android:layout_marginTop="58dp"
+        android:text="@string/paymentValue"
 
-    <Button
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ADD"
-        android:id="@+id/btnAddPayment"
-        android:layout_below="@+id/paymentValue"
-        android:layout_marginTop="80dp"
-        android:layout_alignRight="@+id/paymentValue"
-        android:layout_alignEnd="@+id/paymentValue"
-        android:layout_alignLeft="@+id/paymentValue"
-        android:layout_alignStart="@+id/paymentValue" />
-</RelativeLayout>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="$"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginLeft="50dp"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <EditText
+            android:id="@+id/paymentValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:ems="10"
+            android:inputType="numberDecimal" />
+    </LinearLayout>
+
+<Button
+android:id="@+id/btnAddPayment"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginTop="80dp"
+android:text="ADD" /></LinearLayout>
