--- a/BudgetAllowance/app/src/main/res/menu/menu_main.xml
+++ b/BudgetAllowance/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="100"
         android:title="@string/action_showPastPayments"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_showAllowanceSettings"
+        android:orderInCategory="100"
+        android:title="Allowance Settings"
+        app:showAsAction="never" />
 </menu>
