--- a/BudgetAllowance/app/src/main/res/layout/activity_add_allowance.xml
+++ b/BudgetAllowance/app/src/main/res/layout/activity_add_allowance.xml
@@ -12,6 +12,8 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_weight="1" />
+        android:id="@+id/timeSpinner"
+        android:layout_weight="1"
+        android:entries="@array/timeOptions"
+        />
 </LinearLayout>
