Allowance Settings Activity Design

--- a/BudgetAllowance/app/src/main/res/layout/activity_add_allowance.xml
+++ b/BudgetAllowance/app/src/main/res/layout/activity_add_allowance.xml
@@ -7,13 +7,40 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="lemonapps.budgetallowance.addAllowance">
-
+    tools:context="lemonapps.budgetallowance.addAllowance"
+    android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/allowanceSettingsReccuringTime"
+        android:gravity="center"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
+        />
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/timeSpinner"
-        android:layout_weight="1"
         android:entries="@array/timeOptions"
         />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/allowanceSettingsAmount"
+        android:gravity="center"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
+        />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:id="@+id/allowanceAmount"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/allowanceSettingsSave"
+        android:id="@+id/allowanceSave"
+        android:layout_marginTop="30dp"/>
 </LinearLayout>
